--- a/common style/style.css
+++ b/common style/style.css
@@ -371,6 +371,16 @@
   text-align: center;
 }
 
+#maxAmount {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  text-align: center;
+  color: #4f4f4f;
+  text-align: center;
+}
+
 #cuotaDays {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
