✨ Add signIn functionality

--- a/common style/style.css
+++ b/common style/style.css
@@ -172,6 +172,11 @@
   height: auto;
 }
 
+#qrPaymentIcon{
+  height: 25%;
+  width: 25%;
+}
+
 #homeFrontPageBody #blueheader {
   position: absolute;
   width: 5%;
